fix spacing

--- a/src/containers/parameters/Parameters.css
+++ b/src/containers/parameters/Parameters.css
@@ -94,6 +94,7 @@
 }
 .parameters__control__right {
   display: flex;
+  padding-right: 38px;
 }
 .parameters__control__right > div{
   display: flex;
